--- a/config/db_params.ini
+++ b/config/db_params.ini
@@ -1,4 +1,9 @@
+;host=localhost
+;password=1m0r3_projde@th
+;user=root
+;dbname=swoop_team
+
 host=localhost
-password=1m0r3_projde@th
+password=mysql
 user=root
-dbname=swoop_team
+dbname=lhapps
